// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Survey renders Loading component if data loading 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 hUosMD"
>
  <h4
    className="StyledHeading-sc-1rdh4aw-0 hlZfma"
  >
    Loading...
  </h4>
</div>
`;

exports[`COMPONENT - Survey renders correctly with data 1`] = `
<main
  className="sc-dnqmqq iACYhp"
>
  <section
    className="sc-htoDjs ggzxba"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="StyledGrommet-sc-19lkkz7-0 eUfLDp"
      >
        <div
          className="sc-EHOje cpubXY"
        >
          <div
            className="sc-ifAKCX dDQvBh FormField__FormFieldBox-m9hood-0 igkoAa StyledBox-sc-13pk1d4-0 CAsMy"
          >
            <label
              className="StyledText-sc-1sadyjn-0 bMXxti"
            >
              What kind of feedback are you providing?
            </label>
            <div
              className="StyledBox-sc-13pk1d4-0 gZSidW"
            >
              <button
                aria-label="Open Drop"
                className="Select__StyledSelectDropButton-sc-17idtfo-1 gQjIFS StyledButton-sc-323bzc-0 jfbKsv"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                type="button"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 erazuK"
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 XINUX"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="Select__SelectTextInput-sc-17idtfo-0 lmyIUy StyledTextInput-sc-1x30a0s-0 cyWwXE"
                        name="kind-of-feedback"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        readOnly={true}
                        tabIndex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    className="StyledBox-sc-13pk1d4-0 eLQtUu"
                    style={
                      Object {
                        "minWidth": "auto",
                      }
                    }
                  >
                    <svg
                      aria-label="FormDown"
                      className="StyledIcon-ofa7kd-0 kKIhud"
                      viewBox="0 0 24 24"
                    >
                      <polyline
                        fill="none"
                        points="18 9 12 15 6 9"
                        stroke="#000"
                        strokeWidth="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 dNgQiZ"
      >
        <button
          className="sc-bZQynM iuADUF StyledButton-sc-323bzc-0 bmExQD"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          size="large"
          type="submit"
        >
          submit
        </button>
      </div>
    </form>
  </section>
</main>
`;

exports[`COMPONENT - Survey renders error message 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 ePVEiU"
>
  <h4
    className="StyledHeading-sc-1rdh4aw-0 btqNMh"
  >
    error message
  </h4>
</div>
`;

exports[`COMPONENT - Survey renders info message if there are no questions  1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 ePVEiU"
>
  <h4
    className="StyledHeading-sc-1rdh4aw-0 btqNMh"
  >
    Oops, something went wrong, there is no questions.
  </h4>
</div>
`;
